refactor: improve ui with groups

--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,15 @@
   grid-template-columns: 60% 40%;
 }
 
+.app-configtab {
+  height: 80vh;
+  overflow-y: scroll;
+}
+
+.app-configtab-tree {
+  padding-left: 1em;
+}
+
 .app-configtab-tag label {
   padding: .5em;
 }
